--- a/circuitsacul/website/pages/templates/base.jinja2
+++ b/circuitsacul/website/pages/templates/base.jinja2
@@ -7,7 +7,7 @@
 
         {% block head_static %}
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-        <link rel="shortcut icon" type="image/png" href="{{ url_for('static', path='img/favicon.png') }}"/>
+        <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static', path='img/favicon.ico') }}"/>
         {% endblock %}
     </head>
     <body>
